fix: Change linear gradient in CSS to work on Safari

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -8,7 +8,7 @@
   padding: 0;
   padding-top: 10px;
   z-index: 1;
-  background-image: linear-gradient(to top, #141414, rgba(20,20,20,0.8), rgba(255,0,0,0));
+  background-image: linear-gradient(to top, #141414, rgba(20,20,20,0.8), rgba(20,20,20,0));
   list-style-type: none;
 }
 
